updated plugin descriptions

--- a/CRMBL/source/CMakeLists.txt
+++ b/CRMBL/source/CMakeLists.txt
@@ -43,7 +43,7 @@ juce_add_plugin("${PROJECT_NAME}"
 	NEEDS_MIDI_OUTPUT FALSE
 	IS_MIDI_EFFECT FALSE
 	EDITOR_WANTS_KEYBOARD_FOCUS FALSE
-	DESCRIPTION "A delay with all the features."
+	DESCRIPTION "Delay for insane people."
 	PLUGIN_MANUFACTURER_CODE Ured
 	PLUGIN_CODE Crmb
 	VST3_CATEGORY Delay
