--- a/ClickBox/source/CMakeLists.txt
+++ b/ClickBox/source/CMakeLists.txt
@@ -43,7 +43,7 @@ juce_add_plugin("${PROJECT_NAME}"
 	NEEDS_MIDI_OUTPUT FALSE
 	IS_MIDI_EFFECT FALSE
 	EDITOR_WANTS_KEYBOARD_FOCUS FALSE
-	DESCRIPTION "A compact click generating VST."
+	DESCRIPTION "Randomized click generator."
 	PLUGIN_MANUFACTURER_CODE Ured
 	PLUGIN_CODE Poc9
 	VST3_CATEGORY Generator
