--- a/VU/source/CMakeLists.txt
+++ b/VU/source/CMakeLists.txt
@@ -43,7 +43,7 @@ juce_add_plugin("${PROJECT_NAME}"
 	NEEDS_MIDI_OUTPUT FALSE
 	IS_MIDI_EFFECT FALSE
 	EDITOR_WANTS_KEYBOARD_FOCUS FALSE
-	DESCRIPTION "A VU meter for your VU metering needs."
+	DESCRIPTION "VU meter for your VU metering needs."
 	PLUGIN_MANUFACTURER_CODE Ured
 	PLUGIN_CODE V6sd
 	VST3_CATEGORY Analyzer
