--- a/.github/workflows/pisstortion_build.yml
+++ b/.github/workflows/pisstortion_build.yml
@@ -19,7 +19,7 @@ jobs:
     name: build pisstortion
     strategy:
       matrix:
-        config:
+        include:
         - {
             name: "Windows MSVC",
             os: windows-latest,
@@ -39,7 +39,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
-    
+
     - if: startsWith(matrix.os, 'ubuntu')
       name: install juce dependencies
       id: pisstortion_juce_dependencies
