fixed syntax errors in github actions

--- a/.github/workflows/pisstortion_build.yml
+++ b/.github/workflows/pisstortion_build.yml
@@ -47,7 +47,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install g++ libasound2-dev libjack-jackd2-dev ladspa-sdk libcurl4-openssl-dev libfreetype6-dev libx11-dev libxcomposite-dev libxcursor-dev libxcursor-dev libxext-dev libxinerama-dev libxrandr-dev libxrender-dev libwebkit2gtk-4.0-dev libglu1-mesa-dev mesa-common-dev
 
-    - if: !startsWith(matrix.os, 'windows')
+    - if: ${{ !startsWith(matrix.os, 'windows') }}
       name: configure
       id: pisstortion_configure
       run: |
@@ -67,7 +67,7 @@ jobs:
         cmake --build build --config Release --target Pisstortion_VST
         cmake --build build --config Release --target Pisstortion_VST3
 
-    - if: !startsWith(matrix.os, 'windows')
+    - if: ${{ !startsWith(matrix.os, 'windows') }}
       name: package
       id: pisstortion_package
       run: |
