--- a/.github/workflows/pisstortion_build.yml
+++ b/.github/workflows/pisstortion_build.yml
@@ -51,14 +51,14 @@ jobs:
       name: configure
       id: pisstortion_configure
       run: |
-        cd ~/Pisstoriton
+        cd ~/Pisstortion
         cmake -B build -G "Unix Makefiles"
 
     - if: startsWith(matrix.os, 'windows')
       name: configure windows
       id: pisstortion_configure_windows
       run: |
-        cd ~/Pisstoriton
+        cd ~/Pisstortion
         cmake -B build -G "Visual Studio 17 2022" -T host=x64 -A x64
 
     - name: build
