--- a/.github/workflows/pisstortion_build.yml
+++ b/.github/workflows/pisstortion_build.yml
@@ -36,9 +36,7 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-    - uses: actions/checkout@v2
-      with:
-        submodules: true
+    - uses: actions/checkout@v3
 
     - if: startsWith(matrix.os, 'ubuntu')
       name: install juce dependencies
@@ -51,14 +49,15 @@ jobs:
       name: configure
       id: pisstortion_configure
       run: |
-        cd ~/Pisstortion
+        ls
+        cd ~/Pisstortion/source
         cmake -B build -G "Unix Makefiles"
 
     - if: startsWith(matrix.os, 'windows')
       name: configure windows
       id: pisstortion_configure_windows
       run: |
-        cd ~/Pisstortion
+        cd ~/Pisstortion/source
         cmake -B build -G "Visual Studio 17 2022" -T host=x64 -A x64
 
     - name: build
