--- a/ClickBox/source/CMakeLists.txt
+++ b/ClickBox/source/CMakeLists.txt
@@ -3,6 +3,7 @@ set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 ]]
 
 cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.21)
 project(ClickBox VERSION 1.0.0)
 
 include(FetchContent)
@@ -26,6 +27,7 @@ set(vstdir "../../../Setup/build/free")
 set(vstthreedir "../../../Setup/build/free")
 
 juce_add_plugin("${PROJECT_NAME}"
+	BUNDLE_ID com.unplugred.clickbox
 	COMPANY_NAME "unplugred"
 	COMPANY_WEBSITE "https://vst.unplug.red"
 	COMPANY_EMAIL "arihanan@proton.me"
