--- a/VU/source/CMakeLists.txt
+++ b/VU/source/CMakeLists.txt
@@ -2,7 +2,7 @@
 set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 ]]
 
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.21)
 project(VU VERSION 1.0.0)
 
 include(FetchContent)
@@ -26,6 +26,7 @@ set(vstdir "../../../Setup/build/free")
 set(vstthreedir "../../../Setup/build/free")
 
 juce_add_plugin("${PROJECT_NAME}"
+	BUNDLE_ID com.unplugred.vu
 	COMPANY_NAME "unplugred"
 	COMPANY_WEBSITE "https://vst.unplug.red"
 	COMPANY_EMAIL "arihanan@proton.me"
