--- a/.github/workflows/pisstortion_build.yml
+++ b/.github/workflows/pisstortion_build.yml
@@ -39,28 +39,28 @@ jobs:
     - uses: actions/checkout@v3
 
     - if: startsWith(matrix.os, 'ubuntu')
-      name: install juce dependencies
+      name: (linux) install juce dependencies
       id: pisstortion_juce_dependencies
       run: | 
         sudo apt-get update
         sudo apt-get install g++ libasound2-dev libjack-jackd2-dev ladspa-sdk libcurl4-openssl-dev libfreetype6-dev libx11-dev libxcomposite-dev libxcursor-dev libxcursor-dev libxext-dev libxinerama-dev libxrandr-dev libxrender-dev libwebkit2gtk-4.0-dev libglu1-mesa-dev mesa-common-dev
 
     - if: startsWith(matrix.os, 'windows')
-      name: configure windows
+      name: (windows) configure
       id: pisstortion_configure_windows
       run: |
         cd Pisstortion/source
         cmake -B build -G "Visual Studio 17 2022" -T host=x64 -A x64
 
     - if: startsWith(matrix.os, 'ubuntu')
-      name: configure linux
+      name: (linux) configure
       id: pisstortion_configure_linux
       run: |
         cd Pisstortion/source
         cmake -B build -G "Unix Makefiles"
 
     - if: startsWith(matrix.os, 'mac')
-      name: configure mac
+      name: (mac) configure
       id: pisstortion_configure_mac
       run: |
         cd Pisstortion/source
@@ -73,21 +73,33 @@ jobs:
         cmake --build build --config Release --target Pisstortion_VST3
 
     - if: startsWith(matrix.os, 'windows')
-      name: package windows
+      name: (windows) package
       id: pisstortion_package_windows
       run: |
         mkdir -p "build/Pisstortion"
-        mv "Setup/build/free/Pisstortion.vst3/Contents/x86_64-win/Pisstortion.vst3" "build/Pisstortion/Pisstortion.vst3"
+        cp "Setup/build/free/Pisstortion.vst3/Contents/x86_64-win/Pisstortion.vst3" "build/Pisstortion/Pisstortion.vst3"
 
     - if: ${{ !startsWith(matrix.os, 'windows') }}
-      name: package
+      name: (max+linux) package
       id: pisstortion_package
       run: |
         mkdir -p "build/Pisstortion"
-        mv "Setup/build/free/Pisstortion.vst3" "build/Pisstortion/Pisstortion.vst3"
+        cp "Setup/build/free/Pisstortion.vst3" "build/Pisstortion/Pisstortion.vst3"
 
     - uses: actions/upload-artifact@v2
       with:
         name: Pisstortion ${{ matrix.name }}
         path: build/Pisstortion
+
+    - if: startsWith(matrix.os, 'windows')
+      name: (windows) build installer
+      id: pisstortion_installer
+      run: |
+        cd Setup
+        iscc "pisstortion free.iss"
+
+    - if: startsWith(matrix.os, 'windows')
+      with:
+        name: Pisstortion Installer
+        path: "Setup/Output/Pisstortion Installer.exe"
 
