--- a/.github/workflows/pisstortion_build.yml
+++ b/.github/workflows/pisstortion_build.yml
@@ -1,6 +1,4 @@
 name: Pisstortion Build
-upper: Pisstortion
-lower: pisstortion
 
 on:
   push:
@@ -15,6 +13,8 @@ on:
 env:
   CMAKE_VERSION: 3.22.1
   BUILD_TYPE: Release
+  upper: Pisstortion
+  lower: pisstortion
 
 jobs:
   build:
@@ -49,9 +49,9 @@ jobs:
 
     - if: startsWith(matrix.os, 'windows')
       name: (windows) configure
-      id: ${{lower}}_configure_windows
+      id: $lower_configure_windows
       run: |
-        cd ${{upper}}/source
+        cd $upper/source
         cmake -B build -G "Visual Studio 17 2022" -T host=x64 -A x64
 
     - if: startsWith(matrix.os, 'ubuntu')
@@ -63,9 +63,9 @@ jobs:
 
     - if: startsWith(matrix.os, 'mac')
       name: (mac) configure
-      id: ${{lower}}_configure_mac
+      id: {{lower}}_configure_mac
       run: |
-        cd ${{upper}}/source
+        cd {{upper}}/source
         cmake -B build -G Xcode
 
     - name: build
