--- a/.github/workflows/pisstortion_build.yml
+++ b/.github/workflows/pisstortion_build.yml
@@ -56,9 +56,9 @@ jobs:
 
     - if: startsWith(matrix.os, 'ubuntu')
       name: (linux) configure
-      id: ${{lower}}_configure_linux
+      id: {{lower}}_configure_linux
       run: |
-        cd ${{upper}}/source
+        cd {{upper}}/source
         cmake -B build -G "Unix Makefiles"
 
     - if: startsWith(matrix.os, 'mac')
@@ -69,9 +69,9 @@ jobs:
         cmake -B build -G Xcode
 
     - name: build
-      id: ${{lower}}_build
+      id: {{lower}}_build
       run: |
-        cd ${{upper}}/source
+        cd {{upper}}/source
         cmake --build build --config Release --target Pisstortion_VST3
 
     - if: startsWith(matrix.os, 'windows')
