--- a/.github/workflows/Pisstortion_build.yml
+++ b/.github/workflows/Pisstortion_build.yml
@@ -1,19 +1,18 @@
 name: Pisstortion Build
 
-on:
-  push:
-    branches:
-      - '**'
-    tags:
-      - '*.*.*'
-  pull_request:
-    branches:
-      - master
-
 env:
   CMAKE_VERSION: 3.22.1
   BUILD_TYPE: Release
   PLUG: Pisstortion
+  NOSPACE: Pisstortion
+
+on:
+  push:
+    paths:
+      - '**${{PLUG}}**'
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
@@ -71,38 +70,38 @@ jobs:
       id: build
       run: |
         cd ${{env.PLUG}}/source
-        cmake --build build --config Release --target Pisstortion_VST3
+        cmake --build build --config Release --target ${{env.NOSPACE}}_VST3
 
     - if: startsWith(matrix.os, 'windows')
       name: (windows) package
       id: package_windows
       run: |
-        mkdir -p "build/Pisstortion"
-        mv "Setup/build/free/Pisstortion.vst3/Contents/x86_64-win/Pisstortion.vst3" "build/Pisstortion/Pisstortion.vst3"
-        cp "build/Pisstortion/Pisstortion.vst3" "Setup/build/free/Pisstortion.vst3"
+        mkdir -p "build/${{env.PLUG}}"
+        mv "Setup/build/free/${{env.PLUG}}.vst3/Contents/x86_64-win/${{env.PLUG}}.vst3" "build/${{env.PLUG}}/${{env.PLUG}}.vst3"
+        cp "build/${{env.PLUG}}/${{env.PLUG}}.vst3" "Setup/build/free/${{env.PLUG}}.vst3"
 
     - if: ${{ !startsWith(matrix.os, 'windows') }}
       name: (max+linux) package
       id: package
       run: |
-        mkdir -p "build/Pisstortion"
-        mv "Setup/build/free/Pisstortion.vst3" "build/Pisstortion/Pisstortion.vst3"
+        mkdir -p "build/${{env.PLUG}}"
+        mv "Setup/build/free/${{env.PLUG}}.vst3" "build/${{env.PLUG}}/${{env.PLUG}}.vst3"
 
     - uses: actions/upload-artifact@v2
       with:
-        name: Pisstortion ${{ matrix.name }}
-        path: build/Pisstortion
+        name: ${{env.PLUG}} ${{ matrix.name }}
+        path: build/${{env.PLUG}}
 
 #    - if: startsWith(matrix.os, 'windows')
 #      name: (windows) build installer
 #      id: installer
 #      run: |
 #        cd Setup
-#        iscc "pisstortion free.iss"
+#        iscc "${{env.PLUG}} Free.iss"
 
 #    - if: startsWith(matrix.os, 'windows')
 #      uses: actions/upload-artifact@v2
 #      with:
-#        name: Pisstortion Installer
-#        path: "Setup/Output/Pisstortion Installer.exe"
+#        name: ${{env.PLUG}} Installer
+#        path: "Setup/Output/${{env.PLUG}} Installer.exe"
 
